--- a/0.1-test-notebook.ipynb
+++ b/0.1-test-notebook.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "#### Welcome to Jupyter\n",
     "\n",
-    "This is a Jupyer Notebook. It contains both computer code (e.g. python) and rich text elements (paragraph, equations, figures, links, etc…). This paragraph is an example of the rich text element. You can double click on this paragraph 'cell' to edit it. \n",
+    "This is a Jupyter Notebook. It contains both computer code (e.g. Python) and rich text elements (paragraphs, equations, figures, links, etc.). This paragraph is an example of a rich text element. You can double-click on this paragraph cell to edit it. \n",
     "\n",
-    "Below is a code block. You can double click to edit it. You can also run the code step-by-step (one cell a time) by pressing shift + enter when you have the cell selected."
+    "Below is a code block. You can double-click to edit it. You can also run the code step-by-step (one cell at a time) by pressing Shift + Enter when you have the cell selected."
    ]
   },
   {
@@ -51,9 +51,9 @@
    "source": [
     "#### Create TestWrapper object\n",
     "\n",
-    "We provide a test wrapper class which allows the user to leverage the test framework utilites in external Python projects, such as this notebook. The test wrapper provides RPC access to bitcoind instances directly from the Jupyter notebook cell or any other external python project.\n",
+    "We provide a test wrapper class that allows you to leverage the test framework utilities in external Python projects, such as this notebook. The test wrapper provides RPC access to bitcoind instances directly from the Jupyter notebook cell or any other external Python project.\n",
     "\n",
-    "When `setup` is called, the test wrapper will automatically start a network of 3 bitcoind daemon subprocesses, which can be accessed through the RPC interface. We will use this frequently in this workshop to broadcast schnorr & taproot transactions."
+    "When `setup` is called, the test wrapper will automatically start a network of 3 bitcoind daemon subprocesses, which can be accessed through the RPC interface. We will use this frequently in this workshop to broadcast Schnorr and Taproot transactions."
    ]
   },
   {
@@ -114,7 +114,7 @@
    "source": [
     "#### Shutdown TestNodes\n",
     "\n",
-    "This shuts down the bitcoind instances cleanly and does other housekeeping (eg deleting log directories).\n",
+    "This shuts down the bitcoind instances cleanly and performs other housekeeping tasks (e.g., deleting log directories).\n",
     "\n",
     "This needs to be done at the end of every notebook."
    ]
@@ -134,9 +134,9 @@
    "metadata": {},
    "source": [
     "*Things to keep in mind:*\n",
-    "* Separate test wrapper `setup`, `shutdown` and your code into different cells. This ensures that an error in your code does not affect the test wrapper object and prevents orphaned subprocesses.\n",
+    "* Separate test wrapper `setup`, `shutdown`, and your code into different cells. This ensures that an error in your code does not affect the test wrapper object and prevents orphaned subprocesses.\n",
     "* Only run one test wrapper object at a time.\n",
-    "* If the subprocesses do become orphaned somehow, you can run `killall bitcoind` to shut them down manually."
+    "* If the subprocesses become orphaned somehow, you can run `killall bitcoind` to shut them down manually."
    ]
   },
   {
